dataset1235/2025-2/610742602/users/603578795/executions/677928262_2132966528.log
== RUN (2025-08-26 20:11:48)
-- CODE: 
Textoxto= input("Insira seu nome:")

print(Texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Texto.upper())
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Texto.upper())
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Texto.upper())
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Texto.upper())
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Texto.upper())
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Texto.upper())
          ^^^^^
NameError: name 'Texto' is not defined. Did you mean: 'next'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:11:15)
-- CODE: 
Textoxto= input("Insira seu nome:")

Print(Texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:11:30)
-- CODE: 
Textoxto= input("Insira seu nome:")

Print(Texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:06:31)
-- CODE: 
Var= input("Insira seu nome:")

Print(Var.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:04:19)
-- CODE: 
Nome= input("Insira seu nome")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:10:39)
-- CODE: 
Var= input("Insira seu nome:")

Print(Var.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:05:11)
-- CODE: 
Nome= input("Insira seu nome:")

Print(Nome.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:12:10)
-- CODE: 
Texto= input("Insira seu nome:")

print(Texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome:DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome:MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome:SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome:BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome:HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome:PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:11:22)
-- CODE: 
Textoxto= input("Insira seu nome:")

Print(Texto.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Texto.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:12:19)
-- CODE: 
Texto= input("Insira seu nome:")

print(Texto.upper())
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome:DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome:MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome:SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome:BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome:HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome:PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 20:07:02)
-- CODE: 
Var= input("Insira seu nome:")

Print(Var.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Var.upper())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:04:19)
-- CODE: 
Nome= input("Insira seu nome")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Insira seu nome
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Insira seu nome
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Insira seu nome
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Insira seu nome
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Insira seu nome
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Insira seu nome
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 20:05:08)
-- CODE: 
Nome= input("Insira seu nome:")

Print(Nome.lower())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Print(Nome.lower())
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
